syntax = "proto3";

package com.example.service3.domain;

import "com/example/service3/api/order_api.proto";
import "com/example/service3/domain/order_domain.proto";

import "google/protobuf/empty.proto";
import "kalix/annotations.proto";
import "scalapb/scalapb.proto";
import "validate/validate.proto";

// The Order entity
service OrderEntity {
  option (kalix.codegen) = {
    value_entity: {
      name: "com.example.service3.domain.OrderService"
      entity_type: "order"
      state: "com.example.service3.domain.Order"
    }
  };

  rpc CreateOrder(domain.CreateOrder) returns (domain.Order) {
    option (kalix.method).entity.key_generator = VERSION_4_UUID;
  }

  rpc GetOrder(api.OrderById) returns (domain.Order);

}
